# library_management

./: .gitignore  CMakeLists.txt  book_test.c  books.csv  books.xlsx  main.c  routine.md  test.c  user.h
book_information/: book.c  book.h  books.c  books.h
borrowing_information/: borrowing.c  borrowing.h
data/: books.csv  new-readers.csv  readers.csv  users.csv
entrance/: enter.c  enter.h
reader_information/: readers.c  readers.h  readers_borrowing.c  readers_borrowing.h
user_information/: user.c  user.h
数据爬虫/: tools.py  图书信息.py
